# drawjs

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
engine/wasm/: .gitignore  CMakeLists.txt  build.sh
engine/wasm/public/: index.html  index.withworker.html  main.js
engine/wasm/src/: novadraw_bindings.cpp
engine/wasm/tests/font/: read_char.html  readme.md
engine/wasm/tests/font/evan_wallace/: index.html  index_blend_method.html  index_stencil_method.html  readme.md
engine/wasm/tests/font/font_bezier/: read_char.html
engine/wasm/tests/font/lengyel_method/: buffer 设计.xlsx  readme.md  render_char.html
engine/wasm/tests/font/will_dobbie_method/: font.frag.comment.md  method.md  method.txt  pages.json  web.vert
engine/wasm/tests/webgpu+canvas/: build_html.sh  build_wasm.sh  mime.types  start_server.sh  webgpu.cpp  webgpu.purejs.html  wg.intro.html  wg.shapes.html
engine/wasm/tests/webgpu+canvas/html_template/: module_minimal.html  shell_minimal.html
engine/wasm_rust/novadraw/: .gitignore  .markdownlint.yaml  AGENTS.md  CLAUDE.md  Cargo.toml
engine/wasm_rust/novadraw/.claude/: settings.json
engine/wasm_rust/novadraw/.serena/: project.yml
engine/wasm_rust/novadraw/.trae/deepwiki/: Figure 场景图体系.md  Java 到 Rust 迁移指南.md  meta.json  响应式设计与事件系统.md  布局引擎与边框系统.md  快速上手指南.md  架构决策与开发流程.md  核心几何与数学基础.md  渲染管线与损伤修复.md  演示应用案例分析.md  项目概览与设计哲学.md
engine/wasm_rust/novadraw/.trae/documents/: 按特性提交计划.md
engine/wasm_rust/novadraw/agent/: README.md  architecture-review-agent.md  architecture_contracts.md  delta_backlog.yaml  draw2d-core-milestones.yaml  goal-roadmap.md  governance-contract-coverage.md  inner-loop-checkpoint.md  inner-loop-worklog.md  interruptions-inbox.md  m1-contract-probes-summary.md  m1-product-existence-checks.md  m2-contract-alignment-summary.md  m2-product-existence-checks.md  m3-completion-summary.md  outer-loop-delta-backlog.yaml  quality-checkpoint-schema.md  quality-discover-smoke-test.md  quality-integration-test-plan.md  quality-testing-strategy.md  quality-workflow-readiness.md  run_once.sh  session_checkpoint.md  verify.sh  visual-regression.yaml  visual-verification.md  visual-verify.rb  workflow-continuous.md  workflow-doctor.rb  workflow-history.md  workflow-map.md  workflow-run-continuous.sh  workflow-run-once.sh  workflow-verify.sh  workflow-visual-verify.sh  workflow_evolution.md  worklog.md
engine/wasm_rust/novadraw/agent/backlog/: active.yaml  baseline-debts.yaml  candidates.yaml  index.yaml  recent.yaml  schema.yaml
engine/wasm_rust/novadraw/apps/: README.md
engine/wasm_rust/novadraw/apps/border-app/: Cargo.toml  README.md
engine/wasm_rust/novadraw/apps/clip-app/: Cargo.toml  README.md
engine/wasm_rust/novadraw/apps/editor/: Cargo.toml
engine/wasm_rust/novadraw/apps/event-app/: Cargo.toml  README.md
engine/wasm_rust/novadraw/apps/layout-app/: Cargo.toml  README.md
engine/wasm_rust/novadraw/apps/ndcanvas-app/: Cargo.toml
engine/wasm_rust/novadraw/apps/ndcanvas-test/: Cargo.toml
engine/wasm_rust/novadraw/apps/shape-app/: Cargo.toml  README.md
engine/wasm_rust/novadraw/apps/style-app/: Cargo.toml
engine/wasm_rust/novadraw/apps/transform-app/: Cargo.toml  README.md
engine/wasm_rust/novadraw/apps/update-app/: Cargo.toml
engine/wasm_rust/novadraw/apps/vello-app/: Cargo.toml
engine/wasm_rust/novadraw/apps/vello-demo/: Cargo.toml
engine/wasm_rust/novadraw/apps/viewport-app/: Cargo.toml  README.md
engine/wasm_rust/novadraw/book/: OUTLINE.md
engine/wasm_rust/novadraw/doc/: 00-index.md  bounds_migration_plan.md  coordinates.md  displaylist_design.md  displaylist_detailed.md  draw2d-history.md  figure_box_model.md  figure_core_concepts.md  figure_implementation.md  figure_tree_position.md  gef_principle.md  graphics_api.md  java_to_rust_migration.md  java_to_rust_oo.md  layout-constraints.md  rendering_pipeline.md  swt-gc-analysis.md  trampoline_rendering.md  update_manager_design.md  架构设计.md  理想架构设计.md
engine/wasm_rust/novadraw/doc/01-architecture/: displaylist_design.md  draw2d_api_coverage.md  draw2d_design_axioms.md  draw2d_notification_design.md  ideal-architecture-dynamic.md  ideal-architecture-static.md  ideal-directory-structure.md  render-iterative-archive.md  zed_reactive_design.md
engine/wasm_rust/novadraw/doc/02-figure/: figure_bounds.md  figure_box_model.md  figure_core_concepts.md  figure_implementation.md  figure_tree_operations.md  ifigure_interface.md  layout-constraints.md
engine/wasm_rust/novadraw/doc/03-rendering/: clip_principle.md  displaylist_detailed.md  graphics_api.md  rendering_pipeline.md  trampoline_rendering.md  update_manager_design.md  update_manager_pipeline.md
engine/wasm_rust/novadraw/doc/04-coordinates/: coordinates.md
engine/wasm_rust/novadraw/doc/06-roadmap/: 00-index.md  demo-matrix.md  product-deliverables.md
engine/wasm_rust/novadraw/doc/adr/: README.md  adr-001-webgpu-rust-stack.md  adr-002-notification-effect-queue.md
engine/wasm_rust/novadraw/doc/deprecated/: 架构设计-历史.md
engine/wasm_rust/novadraw/examples/g2/: pom.xml  run.sh
engine/wasm_rust/novadraw/novadraw/: Cargo.toml
engine/wasm_rust/novadraw/novadraw-apps/: Cargo.toml
engine/wasm_rust/novadraw/novadraw-apps/src/: app.rs  lib.rs  prelude.rs
engine/wasm_rust/novadraw/novadraw-core/: Cargo.toml
engine/wasm_rust/novadraw/novadraw-core/src/: color.rs  lib.rs
engine/wasm_rust/novadraw/novadraw-gef/: Cargo.toml
engine/wasm_rust/novadraw/novadraw-gef/src/: lib.rs
engine/wasm_rust/novadraw/novadraw-geometry/: Cargo.toml
engine/wasm_rust/novadraw/novadraw-geometry/src/: lib.rs  point_list.rs  precision.rs  rect.rs  transform.rs  translatable.rs  vec2.rs
engine/wasm_rust/novadraw/novadraw-geometry/tests/: m1_product_existence.rs
engine/wasm_rust/novadraw/novadraw-math/: Cargo.toml
engine/wasm_rust/novadraw/novadraw-render/: Cargo.toml
engine/wasm_rust/novadraw/novadraw-scene/: Cargo.toml
engine/wasm_rust/novadraw/scripts/: check_accessibility.sh
engine/wasm_rust/novadraw/todo/: bounds_migration_plan.md  执行清单.md  架构设计工作清单.md  渲染主循环执行清单.md
(+236 files in other folders)
