[workspace]
resolver = "3"
members = [
  "novadraw",
  "novadraw-math",
  "novadraw-geometry",
  "novadraw-core",
  "novadraw-render",
  "novadraw-scene",

  "apps/editor",
  "apps/vello-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
vello = "0.7.0"
glam = "0.30.9"
slotmap = "1.0.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.99"
wgpu = { version = "26.0.1", default-features = false, features = ["std", "wgsl"] }
winit = "0.30.12"
log = "0.4.27"
env_logger = "0.11.8"
