[package]
name = "novadraw-scene"
version.workspace = true
edition.workspace = true

[dependencies]
novadraw-math = { path = "../novadraw-math" }
novadraw-core = { path = "../novadraw-core" }
novadraw-render = { path = "../novadraw-render", features = ["vello"] }
glam.workspace = true
slotmap.workspace = true
uuid.workspace = true
serde.workspace = true

[features]
default = []
vello = ["novadraw-render/vello"]
debug_render = []
