[package]
name = "novadraw"
version.workspace = true
edition.workspace = true

[features]
default = []
vello = ["dep:vello", "dep:wgpu", "dep:winit", "dep:pollster"]

[dependencies]
glam = { workspace = true }
slotmap = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

vello = { version = "0.5.1", optional = true }
wgpu = { version = "26.0.1", default-features = false, optional = true }
winit = { version = "0.30.12", optional = true }
pollster = { version = "0.4.0", optional = true }
