[package]
name = "novadraw"
version.workspace = true
edition.workspace = true

[features]
default = ["vello"]
vello = ["novadraw-render/vello", "novadraw-scene/vello"]
debug_render = ["novadraw-scene/debug_render"]

[dependencies]
glam.workspace = true
slotmap.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
novadraw-geometry = { path = "../novadraw-geometry" }
novadraw-math = { path = "../novadraw-math" }
novadraw-core = { path = "../novadraw-core" }
novadraw-render = { path = "../novadraw-render", optional = true }
novadraw-scene = { path = "../novadraw-scene", optional = true }
