[package]
name = "editor"
version.workspace = true
edition.workspace = true

[dependencies]
winit = "0.30.12"
vello = { workspace = true }           # TODO: 临时添加，用于调试。后续需要移除，并使用 novadraw
log = { workspace = true }
env_logger = { workspace = true }
novadraw = { path = "../../novadraw" }
pollster = "0.4.0"
