[package]
name = "editor"
version.workspace = true
edition.workspace = true

[dependencies]
winit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
novadraw = { path = "../../novadraw", features = ["vello"] }
glam.workspace = true
pollster.workspace = true
core-graphics = "0.25"
