[package]
name = "event-app"
version.workspace = true
edition.workspace = true

[dependencies]
winit.workspace = true
log.workspace = true
env_logger.workspace = true
novadraw = { path = "../../novadraw", features = ["vello", "debug_render"] }
novadraw-apps = { path = "../../novadraw-apps" }
pollster.workspace = true
glam.workspace = true
