[package]
name = "shape-app"
version.workspace = true
edition.workspace = true

[dependencies]
winit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
novadraw = { path = "../../novadraw", features = ["vello"] }
novadraw-apps = { path = "../../novadraw-apps" }
novadraw-geometry = { path = "../../novadraw-geometry" }
pollster.workspace = true
glam.workspace = true
